--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+  "scripts": {"scripts": {
+  "dev": "vite --port 8080",
+  "build": "vite build",
+  "build:dev": "vite build --mode development",
+  ...
+}
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
