--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "scripts": {"scripts": {
-  "dev": "vite --port 8080",
-  "build": "vite build",
+  "scripts": {"scripts": {"scripts": {
+  "dev": "vite",
+  "build": "tsc -b && vite build",
   "build:dev": "vite build --mode development",
-  ...
+  "lint": "eslint .",
+  "preview": "vite preview"
+}
 }
   },
   "dependencies": {
