--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+ {
   "scripts": {
-    "scripts": {
-      "scripts": {
-        "dev": "vite",
-        "build": "tsc -b && vite build",
-        "build:dev": "vite build --mode development",
-        "lint": "eslint .",
-        "preview": "vite preview"
-      }
-    }
-  },
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "build:dev": "vite build --mode development",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  }
+}
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
